content/v1.4.5/en/api/campaign-ext/TheSpyPartyIssue.md
---
title: "TheSpyPartyIssue"
description: "Auto-generated class reference for TheSpyPartyIssue."
---
# TheSpyPartyIssue

**Namespace:** SandBox.Issues
**Module:** SandBox.Issues
**Type:** `public class TheSpyPartyIssue`
**Base:** none
**File:** `Modules.SandBox/SandBox/SandBox.Issues/TheSpyPartyIssueQuestBehavior.cs`

## Overview

`TheSpyPartyIssue` lives in `SandBox.Issues` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `SandBox.Issues` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Properties

| Name | Signature |
|------|-----------|
| `IssueBriefByIssueGiver` | `public override TextObject IssueBriefByIssueGiver { get; }` |
| `IssueQuestSolutionExplanationByIssueGiver` | `public override TextObject IssueQuestSolutionExplanationByIssueGiver { get; }` |
| `IssueAlternativeSolutionExplanationByIssueGiver` | `public override TextObject IssueAlternativeSolutionExplanationByIssueGiver { get; }` |
| `Description` | `public override TextObject Description { get; }` |
| `IssueAlternativeSolutionAcceptByPlayer` | `public override TextObject IssueAlternativeSolutionAcceptByPlayer { get; }` |
| `IssueAlternativeSolutionResponseByIssueGiver` | `public override TextObject IssueAlternativeSolutionResponseByIssueGiver { get; }` |
| `IssueAlternativeSolutionSuccessLog` | `public override TextObject IssueAlternativeSolutionSuccessLog { get; }` |

## Key Methods

### SuspectNpc
`public struct SuspectNpc(CharacterObject characterObject, bool hasHair, bool hasBigSword, bool withoutMarkings, bool hasBeard)`

**Purpose:** **Purpose:** Executes the SuspectNpc logic.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
var result = theSpyPartyIssue.SuspectNpc(characterObject, false, false, false, false);
```

### AutoGeneratedStaticCollectObjectsSuspectNpc
`public static void AutoGeneratedStaticCollectObjectsSuspectNpc(object o, List<object> collectedObjects)`

**Purpose:** **Purpose:** Executes the AutoGeneratedStaticCollectObjectsSuspectNpc logic.

```csharp
// Static call; no instance required
TheSpyPartyIssue.AutoGeneratedStaticCollectObjectsSuspectNpc(o, collectedObjects);
```

### AlternativeSolutionCondition
`public override bool AlternativeSolutionCondition(out TextObject explanation)`

**Purpose:** **Purpose:** Executes the AlternativeSolutionCondition logic.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
var result = theSpyPartyIssue.AlternativeSolutionCondition(explanation);
```

### IsTroopTypeNeededByAlternativeSolution
`public override bool IsTroopTypeNeededByAlternativeSolution(CharacterObject character)`

**Purpose:** **Purpose:** Determines whether the this instance is in the troop type needed by alternative solution state or condition.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
var result = theSpyPartyIssue.IsTroopTypeNeededByAlternativeSolution(character);
```

### DoTroopsSatisfyAlternativeSolution
`public override bool DoTroopsSatisfyAlternativeSolution(TroopRoster troopRoster, out TextObject explanation)`

**Purpose:** **Purpose:** Executes the DoTroopsSatisfyAlternativeSolution logic.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
var result = theSpyPartyIssue.DoTroopsSatisfyAlternativeSolution(troopRoster, explanation);
```

### GetFrequency
`public override IssueFrequency GetFrequency()`

**Purpose:** **Purpose:** Reads and returns the frequency value held by the this instance.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
var result = theSpyPartyIssue.GetFrequency();
```

### IssueStayAliveConditions
`public override bool IssueStayAliveConditions()`

**Purpose:** **Purpose:** Creates or raises stay alive conditions.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
var result = theSpyPartyIssue.IssueStayAliveConditions();
```

### IsLocationTrackedByQuest
`public override IssueQuestFlags IsLocationTrackedByQuest(Location location)`

**Purpose:** **Purpose:** Determines whether the this instance is in the location tracked by quest state or condition.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
var result = theSpyPartyIssue.IsLocationTrackedByQuest(location);
```

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** **Purpose:** Registers events with the current system so it can later be observed or dispatched.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
theSpyPartyIssue.RegisterEvents();
```

### OnCheckForIssue
`public void OnCheckForIssue(Hero hero)`

**Purpose:** **Purpose:** Invoked when the check for issue event is raised.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
theSpyPartyIssue.OnCheckForIssue(hero);
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** **Purpose:** Synchronizes data across the relevant contexts or systems.

```csharp
// Obtain an instance of TheSpyPartyIssue from the subsystem API first
TheSpyPartyIssue theSpyPartyIssue = ...;
theSpyPartyIssue.SyncData(dataStore);
```

## Usage Example

```csharp
// Typically call this after obtaining an instance from the subsystem API
TheSpyPartyIssue theSpyPartyIssue = ...;
theSpyPartyIssue.SuspectNpc(characterObject, false, false, false, false);
```

## See Also

- [Area Index](../)